# msv_3dof_arm

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_thesis_arm_final.yaml  robot_final_gazebo_control.yaml
launch/: controllers_load.launch  display.launch  gazebo.launch  gazebo_final.launch  sim_final.launch  teleop_final.launch
meshes/: base_link.STL  finger1.STL  finger2.STL  link1.STL  link2.STL  link3.STL
src/: echo_node.cpp  moteus_com_node.py  moteus_com_node_v2.py  teleop_node.cpp
urdf/: msv_3dof_arm.csv  msv_3dof_arm.urdf  thesis_arm_final_orig.urdf
